导航栏排版修改

--- a/src/assets/css/header.less
+++ b/src/assets/css/header.less
@@ -1,15 +1,17 @@
+@import "keyframes";
+
 header{
-  height: 25rem;
+  height: 32rem;
   display: flex;
   flex-direction: column;
   background-color: rgba(0, 0, 0, .2);
   position: relative;
   //font-family: Handwriting;
 
-  .pf-wrap{
+  .header-wrap{
     position: absolute;
     width: 100%;
-    height: 25rem;
+    height: 32rem;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -17,16 +19,14 @@ header{
     background: no-repeat center;
     background-size: cover;
 
-    .pf-picture{
-      //width: 10rem;
-      //height: 10rem;
-      margin: 0 auto 0;
+    .avatar{
+      margin: 0 auto;
       padding: .4rem;
       background: rgba(255,255,255,0.3);
       border-radius: 50%;
       overflow: hidden;
 
-      .pf-picture-wrap{
+      .avatar-wrap{
         width: 10rem;
         height: 10rem;
         border-radius: 50%;
@@ -37,10 +37,12 @@ header{
           height: 100%;
         }
       }
+      -webkit-animation: navDown .5s;
+      animation: navDown .5s;
     }
 
-    .pf-name{
-      margin-top: .6rem;
+    .bloger-name{
+      margin-top: 1.6rem;
       color: #fff;
       text-align: center;
       text-shadow: 0 0 4px rgba(0,0,0,0.5);
@@ -50,84 +52,98 @@ header{
         font-size: 2.2rem;
 
       }
+      -webkit-animation: navDown .5s;
+      animation: navDown .5s;
     }
 
-    .pf-intro{
+    .bloger-intro{
       font-size: 1.6rem;
-      margin-top: .4rem;
+      margin-top: .6rem;
       text-align: center;
       color: #fff;
       line-height: 1.8rem;
       text-shadow: 0 0 .4rem rgba(0,0,0,0.5);
+      -webkit-animation: navDown .5s;
+      animation: navDown .5s;
     }
-  }
 
-  .nav{
-    position: fixed;
-    width: 80%;
-    max-width: 78rem;
-    padding: 1rem;
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
-    z-index: 10;
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-
-    .nav-list{
+    .nav{
+      width: 100%;
+      padding: 1rem;
       display: flex;
       align-items: center;
+      justify-content: center;
+      z-index: 10;
+      -webkit-box-sizing: border-box;
+      -moz-box-sizing: border-box;
+      box-sizing: border-box;
+      align-self: flex-end;
+      position: absolute;
+      bottom: 0;
+      -webkit-animation: navDown .5s;
+      animation: navDown .5s;
 
-      .nav-list-item{
-        padding: 0 .6rem;
-        color: #ffffff;
+      .nav-list{
+        display: flex;
+        align-items: center;
 
-        &:not(:last-child){
-          margin-right: 1rem;
+        .nav-list-item{
+          padding: 0 1rem;
+          color: #ffffff;
+
+          &:not(:last-child){
+            margin-right: 3.8rem;
+          }
         }
       }
     }
   }
 
-  .nav-scroll{
-    background-image: linear-gradient(rgba(230,134,32,.8),rgba(228,69,3,0));
-    opacity: .8;
-    //box-shadow: 0 0 5px 0 #333;
-    .nav-list{
-      display: flex;
-      align-items: center;
-
-      .nav-list-item{
-        padding: 0 .6rem;
-        color: #480300;
-
-        &:hover{
-          mix-blend-mode: difference;
-        }
-        &:not(:last-child){
-          margin-right: 1rem;
-        }
-      }
-    }
-  }
+  //.nav-scroll{
+  //  background-image: linear-gradient(rgba(230,134,32,.8),rgba(228,69,3,0));
+  //  opacity: .8;
+  //  //box-shadow: 0 0 5px 0 #333;
+  //  .nav-list{
+  //    display: flex;
+  //    align-items: center;
+  //
+  //    .nav-list-item{
+  //      padding: 0 .6rem;
+  //      color: #480300;
+  //
+  //      &:hover{
+  //        mix-blend-mode: difference;
+  //      }
+  //      &:not(:last-child){
+  //        margin-right: 1rem;
+  //      }
+  //    }
+  //  }
+  //}
 
   .contact{
     position: absolute;
-    left: 8px;
-    bottom: 30px;
-    width: 30px;
+    left: 1.6rem;
+    bottom: 4rem;
+    width: 2.4rem;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
+    z-index: 99;
 
     .contact-item{
-      width: 30px;
-      height: 30px;
+      width: 2.4rem;
+      height: 2.4rem;
+      text-align: center;
+      color: #ffffff;
+
+      .iconfont{
+        font-size: 2.4rem;
+      }
 
       &:hover{
-        mix-blend-mode: difference;
+        color: @primary-color;
       }
 
       img{
@@ -141,6 +157,10 @@ header{
       }
     }
   }
+
+  .collapse-nav{
+    display: none;
+  }
 }
 
 
@@ -148,29 +168,75 @@ header{
   header{
     height: 20rem;
 
-    .pf-wrap{
+    .header-wrap{
       height: 20rem;
-      .pf-picture{
-        .pf-picture-wrap{
+      .avatar{
+        .avatar-wrap{
           width: 8rem;
           height: 8rem;
         }
       }
-      .pf-name{
+      .bloger-name{
         .name{
           font-size: 2rem;
         }
       }
-      .pf-intro{
+      .bloger-intro{
           font-size: 1.4rem;
       }
-    }
-    .nav{
-      width: 100%;
-      padding: .3rem 1rem;
-      .nav-list{
-        .nav-list-item{
-          padding: 0 .6rem;
+      .nav{
+        display: none;
+        width: 100%;
+        padding: .3rem 1rem;
+        .nav-list{
+          .nav-list-item{
+            padding: 0 .6rem;
+          }
+        }
+      }
+
+      .collapse-nav{
+        display: block;
+        position: absolute;
+        top: 15px;
+        left: 15px;
+        z-index: 100;
+
+        .collapse{
+          width: 40px;
+          height: 40px;
+          position: relative;
+          text-align: center;
+          cursor: pointer;
+          -webkit-animation: navDown .5s;
+          animation: navDown .5s;
+
+          .iconfont{
+            color: #ffffff;
+            font-size: 24px;
+          }
+
+        }
+        .bar{
+          display: block;
+          text-align: center;
+          background: rgba(180,180,180,.8);
+          width: 120px;
+          -webkit-animation: show .3s;
+          animation: show .3s;
+
+          li{
+            float: none;
+            width: 100%;
+            list-style: none;
+            line-height: 36px;
+            cursor: pointer;
+
+            a{
+              display: block;
+              color: @primary-color;
+            }
+          }
         }
       }
     }
