--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -1,166 +1,12 @@
-* {
-  margin: 0;
-  padding: 0;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-}
-html {
-  -webkit-text-size-adjust: none;
-  font-size: 10px;
-  height: 100%;
-}
-body {
-  -webkit-font-smoothing: antialiased;
-  /*chrome、safari*/
-  -moz-osx-font-smoothing: grayscale;
-  /*firefox*/
-  font-size: 1.6rem;
-  margin: 0;
-  padding: 0;
-  font-family: -apple-system, "Helvetica Neue", Arial, "PingFang SC", "Hiragino Sans GB", STHeiti, "Microsoft YaHei", "Microsoft JhengHei", "Source Han Sans SC", "Noto Sans CJK SC", "Source Han Sans CN", "Noto Sans SC", "Source Han Sans TC", "Noto Sans CJK TC", "WenQuanYi Micro Hei", SimSun, sans-serif, "PingFang SC ExtraLight";
-  color: #404040;
-  line-height: 1.7;
-  height: 100%;
-}
-ul,
-li,
-p {
-  list-style: none;
-}
-a,
-a:link,
-a:visited,
-a:focus,
-a:hover {
-  text-decoration: none;
-  color: inherit;
-}
-#app {
-  display: flex;
-  flex-flow: column;
-  height: 100%;
-  overflow: auto;
-  background: linear-gradient(#ffffff, #e5c985) fixed;
-  padding-bottom: 2rem;
-}
-#app .header,
-#app .footer {
-  flex: 0 0 auto;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-  width: 80%;
-  max-width: 78rem;
-  margin: 0 auto;
-}
-#app .header {
-  border-top-left-radius: 1rem;
-  border-top-right-radius: 1rem;
-  overflow: hidden;
-}
-#app .main {
-  flex: 1 0 auto;
-  order: 1;
-  display: flex;
-  justify-content: center;
-}
-#app .main .main-wrapper {
-  width: 80%;
-  max-width: 78rem;
-  transition: all .4s;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-  padding: 0 .5rem;
-  background-color: rgba(255, 255, 255, 0.3);
-}
-#app .footer {
-  order: 3;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  height: 10rem;
-  background-image: linear-gradient(rgba(255, 255, 255, 0.3), rgba(255, 255, 255, 0.8));
-  border-bottom-left-radius: 1rem;
-  border-bottom-right-radius: 1rem;
-  overflow: hidden;
-}
-#app .back-top {
-  position: fixed;
-  bottom: 2rem;
-  right: 2rem;
-  height: 3rem;
-  width: 3rem;
-  z-index: 998;
-  font-size: 2rem;
-  box-sizing: content-box;
-  color: #333;
-  text-align: center;
-  border-radius: 100%;
-  filter: alpha(opacity=70);
-  -moz-opacity: .7;
-  opacity: .7;
-  -khtml-opacity: .7;
-}
-#app .back-top:hover .back-top-border {
-  -webkit-animation: toproll 8s linear infinite normal;
-  -moz-animation: toproll 8s linear infinite normal;
-  animation: toproll 8s linear infinite normal;
-}
-#app .back-top .back-top-border {
-  z-index: -1;
-  display: block;
-  position: absolute;
-  height: 3rem;
-  width: 3rem;
-  border-radius: 100%;
-  border: 0.3rem dashed #e5c985;
-  box-sizing: border-box;
-  cursor: pointer;
-  background-color: #e7e7e7;
-  box-shadow: 0 0 0.5rem #000000;
-  -webkit-animation: toproll 12s linear infinite normal;
-  -moz-animation: toproll 12s linear infinite normal;
-  animation: toproll 12s linear infinite normal;
-}
-#app .back-top .iconfont {
-  display: inline-block;
-  font-size: inherit;
-  text-rendering: auto;
-  -webkit-font-smoothing: antialiased;
-  line-height: 1.5rem;
-  margin-top: 0.75rem;
-  cursor: pointer;
-}
-@media screen and (max-width: 768px) {
-  #app .header {
-    width: 100% !important;
-    border-left: none !important;
-    border-right: none !important;
-    border-top-left-radius: 0 !important;
-    border-top-right-radius: 0 !important;
+@keyframes show-fade-up {
+  from {
+    opacity: 0;
+    bottom: -8rem;
   }
-  #app .main-wrapper {
-    width: 100% !important;
-    padding: 0 .8rem !important;
-    border-left: none !important;
-    border-right: none !important;
+  to {
+    opacity: 1;
+    bottom: 0;
   }
-  #app .footer {
-    width: 100% !important;
-    height: 6rem !important;
-    border-left: none !important;
-    border-right: none !important;
-  }
-}
-.fade-enter-active {
-  animation: router-fade 0.5s;
-}
-.fade-leave-active {
-  animation: router-fade 0.5s reverse;
 }
 @keyframes router-fade {
   from {
@@ -215,4 +61,213 @@ a:hover {
   to {
     -moz-transform: rotate(360deg);
   }
+}
+@-webkit-keyframes links {
+  0% {
+    -webkit-transform: rotate(-2deg);
+  }
+  100% {
+    -webkit-transform: rotate(2deg);
+  }
+}
+@-webkit-keyframes navDown {
+  0% {
+    opacity: 0;
+    transform: scale(1) translateY(-10em);
+  }
+  100% {
+    opacity: 1;
+    transform: scale(1) translateY(0);
+  }
+}
+@-webkit-keyframes articleUp {
+  0% {
+    opacity: 0;
+    transform: scale(1) translateY(10em);
+  }
+  100% {
+    opacity: 1;
+    transform: scale(1) translateY(0);
+  }
+}
+@-webkit-keyframes show {
+  0% {
+    opacity: 0;
+    transform: scale(0);
+  }
+  70% {
+    transform: scale(1.1);
+  }
+  100% {
+    opacity: 1;
+    transform: scale(1);
+  }
+}
+@-webkit-keyframes toTop {
+  0% {
+    opacity: 0;
+    transform: translateX(10em);
+  }
+  100% {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+* {
+  margin: 0;
+  padding: 0;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+}
+html {
+  -webkit-text-size-adjust: none;
+  font-size: 10px;
+  height: 100%;
+}
+body {
+  -webkit-font-smoothing: antialiased;
+  /*chrome、safari*/
+  -moz-osx-font-smoothing: grayscale;
+  /*firefox*/
+  font-size: 1.6rem;
+  margin: 0;
+  padding: 0;
+  font-family: -apple-system, "Helvetica Neue", Arial, "PingFang SC", "Hiragino Sans GB", STHeiti, "Microsoft YaHei", "Microsoft JhengHei", "Source Han Sans SC", "Noto Sans CJK SC", "Source Han Sans CN", "Noto Sans SC", "Source Han Sans TC", "Noto Sans CJK TC", "WenQuanYi Micro Hei", SimSun, sans-serif, "PingFang SC ExtraLight";
+  color: #404040;
+  line-height: 1.7;
+  height: 100%;
+}
+ul,
+li,
+p {
+  list-style: none;
+}
+a,
+a:link,
+a:visited,
+a:focus,
+a:hover {
+  text-decoration: none;
+  color: inherit;
+}
+#app {
+  display: flex;
+  flex-flow: column;
+  height: 100%;
+  overflow: auto;
+  padding-bottom: 2rem;
+}
+#app .header,
+#app .footer {
+  flex: 0 0 auto;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  width: 100%;
+  margin: 0 auto;
+}
+#app .header {
+  overflow: hidden;
+}
+#app .main {
+  flex: 1 0 auto;
+  order: 1;
+  display: flex;
+  justify-content: center;
+}
+#app .main .main-wrapper {
+  width: 80%;
+  max-width: 78rem;
+  transition: all .4s;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  padding: 0 .5rem;
+  background-color: rgba(255, 255, 255, 0.3);
+}
+#app .footer {
+  order: 3;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 10rem;
+  background-image: linear-gradient(rgba(255, 255, 255, 0.3), rgba(255, 255, 255, 0.8));
+  overflow: hidden;
+}
+#app .back-top {
+  position: fixed;
+  bottom: 2rem;
+  right: 2rem;
+  height: 3rem;
+  width: 3rem;
+  z-index: 998;
+  font-size: 2rem;
+  box-sizing: content-box;
+  color: #333;
+  text-align: center;
+  border-radius: 100%;
+  filter: alpha(opacity=70);
+  -moz-opacity: .7;
+  opacity: .7;
+  -khtml-opacity: .7;
+}
+#app .back-top:hover .back-top-border {
+  -webkit-animation: toproll 8s linear infinite normal;
+  -moz-animation: toproll 8s linear infinite normal;
+  animation: toproll 8s linear infinite normal;
+}
+#app .back-top .back-top-border {
+  z-index: -1;
+  display: block;
+  position: absolute;
+  height: 3rem;
+  width: 3rem;
+  border-radius: 100%;
+  border: 0.3rem dashed #ffb733;
+  box-sizing: border-box;
+  cursor: pointer;
+  background-color: #e7e7e7;
+  box-shadow: 0 0 0.5rem #000000;
+  -webkit-animation: toproll 12s linear infinite normal;
+  -moz-animation: toproll 12s linear infinite normal;
+  animation: toproll 12s linear infinite normal;
+}
+#app .back-top .iconfont {
+  display: inline-block;
+  font-size: inherit;
+  text-rendering: auto;
+  -webkit-font-smoothing: antialiased;
+  line-height: 1.5rem;
+  margin-top: 0.75rem;
+  cursor: pointer;
+}
+@media screen and (max-width: 768px) {
+  #app .header {
+    width: 100% !important;
+    border-left: none !important;
+    border-right: none !important;
+    border-top-left-radius: 0 !important;
+    border-top-right-radius: 0 !important;
+  }
+  #app .main-wrapper {
+    width: 100% !important;
+    padding: 0 .8rem !important;
+    border-left: none !important;
+    border-right: none !important;
+  }
+  #app .footer {
+    width: 100% !important;
+    height: 6rem !important;
+    border-left: none !important;
+    border-right: none !important;
+  }
+}
+.fade-enter-active {
+  animation: router-fade 0.5s;
+}
+.fade-leave-active {
+  animation: router-fade 0.5s reverse;
 }
