--- a/src/assets/css/common.less
+++ b/src/assets/css/common.less
@@ -1,7 +1,4 @@
-@primary-color: lighten(#dcb65b,10%);
-@side-color: #222222;
-@black: #000000;
-@white: #ffffff;
+@import "keyframes";
 
 * {
   margin: 0;
@@ -45,7 +42,7 @@ a, a:link, a:visited, a:focus, a:hover {
   flex-flow: column;
   height: 100%;
   overflow: auto;
-  background: linear-gradient(#ffffff,@primary-color) fixed;
+  //background: linear-gradient(#ffffff,@primary-color) fixed;
   padding-bottom: 2rem;
 
 
@@ -56,8 +53,7 @@ a, a:link, a:visited, a:focus, a:hover {
     box-sizing: border-box;
     //border-left: thin solid #333333;
     //border-right: thin solid #333333;
-    width: 80%;
-    max-width: 78rem;
+    width: 100%;
     margin: 0 auto;
   }
 
@@ -65,8 +61,6 @@ a, a:link, a:visited, a:focus, a:hover {
     //box-shadow: 0 0 3px #333;
     //-webkit-box-shadow: 0 0 3px #333;
     //-moz-box-shadow: 0 0 3px #333;
-    border-top-left-radius: 1rem;
-    border-top-right-radius: 1rem;
     overflow: hidden;
   }
 
@@ -99,8 +93,6 @@ a, a:link, a:visited, a:focus, a:hover {
     justify-content: center;
     height: 10rem;
     background-image: linear-gradient(rgba(255,255,255,.3),rgba(255,255,255,.8));
-    border-bottom-left-radius: 1rem;
-    border-bottom-right-radius: 1rem;
     overflow: hidden;
   }
 
@@ -188,66 +180,6 @@ a, a:link, a:visited, a:focus, a:hover {
   animation: router-fade .5s reverse;
 }
 
-@keyframes router-fade {
-  from {
-    opacity: 0;
-    transform: translateY(20px);
-  }
-  to {
-    opacity: 1;
-    transform: translateY(0px);
-  }
-}
-
-@-webkit-keyframes router-fade {
-  from {
-    opacity: 0;
-    transform: translateY(20px);
-  }
-  to {
-    opacity: 1;
-    transform: translateY(0px);
-  }
-}
-
-@-moz-keyframes router-fade {
-  from {
-    opacity: 0;
-    transform: translateY(20px);
-  }
-  to {
-    opacity: 1;
-    transform: translateY(0px);
-  }
-}
-
-
-@keyframes toproll {
-  from {
-    transform: rotate(0deg)
-  }
-  to {
-    transform: rotate(360deg)
-  }
-}
-
-@-webkit-keyframes toproll {
-  from {
-    -webkit-transform: rotate(0deg)
-  }
-  to {
-    -webkit-transform: rotate(360deg)
-  }
-}
-
-@-moz-keyframes toproll {
-  from {
-    -moz-transform: rotate(0deg)
-  }
-  to {
-    -moz-transform: rotate(360deg)
-  }
-}
 
 ///* 超小屏幕（手机，小于 768px） */
 //@media screen and (max-width: 767px) {
