--- a/src/assets/css/common.less
+++ b/src/assets/css/common.less
@@ -9,6 +9,11 @@
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
+*::-webkit-scrollbar{
+  width: 0;
+  background: rgba(0,0,0,0);
+}
+
 
 html {
   -webkit-text-size-adjust: none;
@@ -43,7 +48,7 @@ a, a:link, a:visited, a:focus, a:hover {
   height: 100%;
   overflow: auto;
   //background: linear-gradient(#ffffff,@primary-color) fixed;
-  padding-bottom: 2rem;
+  //padding-bottom: 2rem;
 
 
   .header, .footer {
