--- a/src/assets/css/friends.css
+++ b/src/assets/css/friends.css
@@ -1,10 +1,131 @@
-#friends .friends-section {
+@keyframes show-fade-up {
+  from {
+    opacity: 0;
+    bottom: -8rem;
+  }
+  to {
+    opacity: 1;
+    bottom: 0;
+  }
+}
+@keyframes router-fade {
+  from {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0px);
+  }
+}
+@-webkit-keyframes router-fade {
+  from {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0px);
+  }
+}
+@-moz-keyframes router-fade {
+  from {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0px);
+  }
+}
+@keyframes toproll {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+@-webkit-keyframes toproll {
+  from {
+    -webkit-transform: rotate(0deg);
+  }
+  to {
+    -webkit-transform: rotate(360deg);
+  }
+}
+@-moz-keyframes toproll {
+  from {
+    -moz-transform: rotate(0deg);
+  }
+  to {
+    -moz-transform: rotate(360deg);
+  }
+}
+@-webkit-keyframes links {
+  0% {
+    -webkit-transform: rotate(-2deg);
+  }
+  100% {
+    -webkit-transform: rotate(2deg);
+  }
+}
+@-webkit-keyframes navDown {
+  0% {
+    opacity: 0;
+    transform: scale(1) translateY(-10em);
+  }
+  100% {
+    opacity: 1;
+    transform: scale(1) translateY(0);
+  }
+}
+@-webkit-keyframes articleUp {
+  0% {
+    opacity: 0;
+    transform: scale(1) translateY(10em);
+  }
+  100% {
+    opacity: 1;
+    transform: scale(1) translateY(0);
+  }
+}
+@-webkit-keyframes show {
+  0% {
+    opacity: 0;
+    transform: scale(0);
+  }
+  70% {
+    transform: scale(1.1);
+  }
+  100% {
+    opacity: 1;
+    transform: scale(1);
+  }
+}
+@-webkit-keyframes toTop {
+  0% {
+    opacity: 0;
+    transform: translateX(10em);
+  }
+  100% {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+#friends {
   width: 100%;
 }
-#friends .friends-section .friends-section-title {
-  font-weight: 400;
-  padding: 1rem 0 0;
-  font-size: 1.6rem;
+#friends .friends-section {
+  width: 100%;
+  padding: 4px;
+}
+#friends .friends-section .friends-title {
+  width: 100%;
+  text-align: center;
+  padding: 1rem 0;
+  font-size: 2.4rem;
+  font-weight: 600;
 }
 #friends .friends-section .friends-ul {
   width: 100%;
@@ -18,9 +139,18 @@
 #friends .friends-section .friends-ul .friends-li {
   width: 100%;
   padding: .8rem 1.6rem;
-  background: #f6f6f6;
   border-radius: 4px;
   margin-top: 1.6rem;
+  color: #eeeeee;
+}
+#friends .friends-section .friends-ul .friends-li:nth-child(3n+1) {
+  background: rgba(140, 131, 131, 0.6);
+}
+#friends .friends-section .friends-ul .friends-li:nth-child(3n+2) {
+  background: rgba(132, 59, 59, 0.6);
+}
+#friends .friends-section .friends-ul .friends-li:nth-child(3n+3) {
+  background: rgba(114, 53, 134, 0.6);
 }
 #friends .friends-section .friends-ul .friends-li:first-child {
   margin-top: 0;
@@ -43,7 +173,7 @@
   -ms-transition: all ease-in-out 0.5s;
 }
 #friends .friends-section .friends-ul .friends-li .friends-li-div .friends-pf-img:hover {
-  border-color: #9C9;
+  border-color: #ffb733;
   transform: rotate(360deg);
   -webkit-transform: rotate(360deg);
   -moz-transform: rotate(360deg);
@@ -106,6 +236,9 @@
   font-size: 1.6rem;
 }
 @media screen and (max-width: 768px) {
+  #friends .friends-section .friends-title {
+    font-size: 1.8rem;
+  }
   #friends .friends-section .friends-ul .friends-li:first-child {
     margin-top: 0;
   }
@@ -130,7 +263,7 @@
     justify-content: center;
   }
   #friends .friends-section .friends-ul .friends-li .friends-li-div .friends-info .friends-info-name {
-    font-size: 1.7rem;
+    font-size: 1.6rem;
   }
   #friends .friends-section .friends-ul .friends-li .friends-li-div .friends-info .friends-info-others {
     overflow: hidden;
