--- a/src/assets/css/friends.less
+++ b/src/assets/css/friends.less
@@ -1,12 +1,17 @@
+@import "keyframes";
+
 #friends{
-  //font-family: Handwriting;
+  width: 100%;
 
   .friends-section{
     width: 100%;
-    .friends-section-title{
-      font-weight: 400;
-      padding: 1rem 0 0;
-      font-size: 1.6rem;
+    padding: 4px;
+    .friends-title{
+      width: 100%;
+      text-align: center;
+      padding: 1rem 0;
+      font-size: 2.4rem;
+      font-weight: 600;
     }
     .friends-ul{
       width: 100%;
@@ -20,9 +25,21 @@
       .friends-li{
         width: 100%;
         padding: .8rem 1.6rem;
-        background: #f6f6f6;
         border-radius: 4px;
         margin-top: 1.6rem;
+        color: #eeeeee;
+
+        &:nth-child(3n+1){
+          background: rgba(140,131,131,.6);
+        }
+
+        &:nth-child(3n+2){
+          background: rgba(132,59,59,.6);
+        }
+
+        &:nth-child(3n+3){
+          background: rgba(114,53,134,.6);
+        }
 
         &:first-child{
           margin-top: 0;
@@ -45,8 +62,8 @@
             -moz-transition: all ease-in-out .5s;
             -ms-transition: all ease-in-out .5s;
 
-            &:hover {
-              border-color: #9C9;
+            &:hover{
+              border-color: @primary-color;
               transform: rotate(360deg);
               -webkit-transform: rotate(360deg);
               -moz-transform: rotate(360deg);
@@ -129,7 +146,8 @@
   @media screen and (max-width: 768px) {
 
     .friends-section {
-      .friends-section-title{
+      .friends-title{
+        font-size: 1.8rem;
       }
       .friends-ul{
         .friends-li{
@@ -166,7 +184,7 @@
               justify-content: center;
               //align-items: center;
               .friends-info-name{
-                font-size: 1.7rem;
+                font-size: 1.6rem;
               }
 
               .friends-info-others{
