--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -115,6 +115,14 @@
 }
 #index {
   position: relative;
+  padding: 4px;
+}
+#index .index-title {
+  width: 100%;
+  text-align: center;
+  padding: 1rem 0;
+  font-size: 2.4rem;
+  font-weight: 600;
 }
 #index .tags {
   width: 100%;
@@ -123,7 +131,6 @@
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
-  padding: 1rem 0 0;
 }
 #index .tags .tags-item {
   padding: .2rem .6rem;
@@ -174,7 +181,6 @@
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
-  margin-bottom: 1.2rem;
   background-color: rgba(255, 255, 255, 0.8);
   -webkit-animation: articleUp .8s;
   animation: articleUp .8s;
@@ -320,8 +326,11 @@
   margin-right: 1.6rem;
 }
 @media screen and (max-width: 768px) {
+  #index .index-title {
+    font-size: 1.8rem;
+  }
   #index .tags .tags-item {
-    padding: .1rem .4rem;
+    padding: 0 .4rem;
     font-size: 1.2rem;
   }
   #index .article-list {
@@ -337,13 +346,13 @@
     display: none;
   }
   #index .article-list .article-list-item .article-info-wrap .article-info .article-info-title {
-    font-size: 1.7rem;
+    font-size: 1.6rem;
   }
   #index .article-list .article-list-item .article-info-wrap .article-info .article-info-others span {
     font-size: 1.2rem;
   }
   #index .article-list .article-list-item .article-summary-div .article-summary-p {
-    font-size: 1.6rem;
+    font-size: 1.4rem;
   }
   #index .article-list .article-list-item .article-tags .article-tags-item {
     padding: .1rem .4rem;
