--- a/src/assets/css/comment.css
+++ b/src/assets/css/comment.css
@@ -174,6 +174,19 @@
   padding: 1.2rem 0;
   font-size: 1.6rem;
   line-height: 2rem;
+  position: relative;
+}
+.comment-section .comment-item .comment-content .reply-btn {
+  display: block;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  padding: 4px;
+  color: #cc8400;
+  font-size: 1.4rem;
+  position: absolute;
+  right: 0;
+  bottom: 0;
 }
 .comment-section .comment-item .reply-wrap {
   width: 100%;
@@ -221,7 +234,7 @@
   font-size: 1.4rem;
 }
 .comment-section .comment-item .reply-wrap .reply-list .reply-item .reply-author .reply-author-name .name span {
-  color: #ffdb99;
+  color: #ffc966;
 }
 .comment-section .comment-item .reply-wrap .reply-list .reply-item .reply-author .reply-author-name .time {
   font-size: 1.4rem;
@@ -234,4 +247,17 @@
   padding: 1.2rem 0;
   font-size: 1.4rem;
   line-height: 2rem;
+  position: relative;
+}
+.comment-section .comment-item .reply-wrap .reply-list .reply-item .reply-content .reply-btn {
+  display: block;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  padding: 4px;
+  color: #cc8400;
+  font-size: 1.4rem;
+  position: absolute;
+  right: 0;
+  bottom: 0;
 }
