--- a/src/assets/css/comment.less
+++ b/src/assets/css/comment.less
@@ -69,6 +69,20 @@
       padding: 1.2rem 0;
       font-size: 1.6rem;
       line-height: 2rem;
+      position: relative;
+
+      .reply-btn{
+        display: block;
+        -webkit-box-sizing: border-box;
+        -moz-box-sizing: border-box;
+        box-sizing: border-box;
+        padding: 4px;
+        color: #cc8400;
+        font-size: 1.4rem;
+        position: absolute;
+        right: 0;
+        bottom: 0;
+      }
     }
 
     .reply-wrap{
@@ -121,7 +135,7 @@
                 font-size: 1.4rem;
 
                 span{
-                  color: lighten(@primary-color,20%);
+                  color: lighten(@primary-color,10%);
                 }
 
               }
@@ -139,6 +153,20 @@
             padding: 1.2rem 0;
             font-size: 1.4rem;
             line-height: 2rem;
+            position: relative;
+
+            .reply-btn{
+              display: block;
+              -webkit-box-sizing: border-box;
+              -moz-box-sizing: border-box;
+              box-sizing: border-box;
+              padding: 4px;
+              color: #cc8400;
+              font-size: 1.4rem;
+              position: absolute;
+              right: 0;
+              bottom: 0;
+            }
           }
         }
       }
