--- a/src/assets/css/comment.less
+++ b/src/assets/css/comment.less
@@ -173,3 +173,94 @@
     }
   }
 }
+
+@media screen and (max-width: 768px){
+  .comment-section{
+
+    .comment-title{
+      font-size: 1.6rem;
+      text-indent: 4px;
+      height: 2.8rem;
+      line-height: 2.8rem;
+    }
+
+    hr{
+      margin: 8px 0;
+    }
+
+    .comment-item{
+      padding: 8px 4px 0;
+
+      .comment-author{
+
+        .comment-author-avatar{
+          width: 32px;
+          height: 32px;
+        }
+
+        .comment-author-name{
+          .name{
+            font-size: 1.3rem;
+          }
+          .time{
+            font-size: 1.3rem;
+          }
+        }
+      }
+
+      .comment-content{
+        padding: 1rem 0;
+        font-size: 1.4rem;
+        line-height: 1.8rem;
+
+        .reply-btn{
+          padding: 4px;
+          font-size: 1.3rem;
+        }
+      }
+
+      .reply-wrap{
+
+        .reply-list{
+          width: 98%;
+          -webkit-box-sizing: border-box;
+          -moz-box-sizing: border-box;
+          box-sizing: border-box;
+
+          .reply-item{
+            padding: 8px 4px 0;
+
+            .reply-author{
+
+              .reply-author-avatar{
+                display: block;
+                width: 32px;
+                height: 32px;
+                margin-right: 1rem;
+              }
+
+              .reply-author-name{
+                .name{
+                  font-size: 1.2rem;
+                }
+                .time{
+                  font-size: 1.2rem;
+                }
+              }
+            }
+
+            .reply-content{
+              padding: 1rem 0;
+              font-size: 1.2rem;
+              line-height: 1.8rem;
+
+              .reply-btn{
+                font-size: 1.2rem;
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+}
