--- a/src/assets/css/article.css
+++ b/src/assets/css/article.css
@@ -134,7 +134,7 @@
   border-radius: .4rem;
   box-shadow: 0 0 3px #333;
   cursor: pointer;
-  background-color: #d9e8bf;
+  background-color: #ffdb99;
   position: absolute;
   top: 1rem;
 }
@@ -152,6 +152,7 @@
 #article .article-section .article-attr {
   width: 100%;
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
   justify-content: center;
   margin-bottom: 2rem;
@@ -159,9 +160,19 @@
 }
 #article .article-section .article-attr .article-attr-item {
   font-size: 1.4rem;
+  text-align: justify;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
 }
 #article .article-section .article-attr .article-attr-item:not(:last-child) {
   margin-right: 1.4rem;
+}
+#article .article-section .article-attr .article-attr-item:hover {
+  color: #ffb733;
+}
+#article .article-section .article-attr .article-attr-item .iconfont {
+  margin-right: 3px;
 }
 #article .article-section hr {
   margin: 10px 0;
@@ -211,9 +222,9 @@
     margin-right: 1rem;
   }
   #article .article-section blockquote {
-    font-size: 1.6rem;
+    font-size: 1.5rem;
   }
   #article .article-section .article-content {
-    font-size: 1.6rem;
+    font-size: 1.5rem;
   }
 }
