--- a/src/assets/css/comment.css
+++ b/src/assets/css/comment.css
@@ -261,3 +261,65 @@
   right: 0;
   bottom: 0;
 }
+@media screen and (max-width: 768px) {
+  .comment-section .comment-title {
+    font-size: 1.6rem;
+    text-indent: 4px;
+    height: 2.8rem;
+    line-height: 2.8rem;
+  }
+  .comment-section hr {
+    margin: 8px 0;
+  }
+  .comment-section .comment-item {
+    padding: 8px 4px 0;
+  }
+  .comment-section .comment-item .comment-author .comment-author-avatar {
+    width: 32px;
+    height: 32px;
+  }
+  .comment-section .comment-item .comment-author .comment-author-name .name {
+    font-size: 1.3rem;
+  }
+  .comment-section .comment-item .comment-author .comment-author-name .time {
+    font-size: 1.3rem;
+  }
+  .comment-section .comment-item .comment-content {
+    padding: 1rem 0;
+    font-size: 1.4rem;
+    line-height: 1.8rem;
+  }
+  .comment-section .comment-item .comment-content .reply-btn {
+    padding: 4px;
+    font-size: 1.3rem;
+  }
+  .comment-section .comment-item .reply-wrap .reply-list {
+    width: 98%;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+  }
+  .comment-section .comment-item .reply-wrap .reply-list .reply-item {
+    padding: 8px 4px 0;
+  }
+  .comment-section .comment-item .reply-wrap .reply-list .reply-item .reply-author .reply-author-avatar {
+    display: block;
+    width: 32px;
+    height: 32px;
+    margin-right: 1rem;
+  }
+  .comment-section .comment-item .reply-wrap .reply-list .reply-item .reply-author .reply-author-name .name {
+    font-size: 1.2rem;
+  }
+  .comment-section .comment-item .reply-wrap .reply-list .reply-item .reply-author .reply-author-name .time {
+    font-size: 1.2rem;
+  }
+  .comment-section .comment-item .reply-wrap .reply-list .reply-item .reply-content {
+    padding: 1rem 0;
+    font-size: 1.2rem;
+    line-height: 1.8rem;
+  }
+  .comment-section .comment-item .reply-wrap .reply-list .reply-item .reply-content .reply-btn {
+    font-size: 1.2rem;
+  }
+}
