修复因评论组件按钮默认事件引起的不能清空评论的bug

--- a/src/assets/css/commentBox.css
+++ b/src/assets/css/commentBox.css
@@ -242,6 +242,7 @@
     padding: 0 .8rem;
     font-size: 1.2rem;
     border-radius: 4px;
+    touch-action: none;
   }
   .commentBox #comment_form .form-footer button:not(:last-child) {
     margin-right: 1rem;
