--- a/src/assets/css/header.less
+++ b/src/assets/css/header.less
@@ -99,28 +99,6 @@ header{
     }
   }
 
-  //.nav-scroll{
-  //  background-image: linear-gradient(rgba(230,134,32,.8),rgba(228,69,3,0));
-  //  opacity: .8;
-  //  //box-shadow: 0 0 5px 0 #333;
-  //  .nav-list{
-  //    display: flex;
-  //    align-items: center;
-  //
-  //    .nav-list-item{
-  //      padding: 0 .6rem;
-  //      color: #480300;
-  //
-  //      &:hover{
-  //        mix-blend-mode: difference;
-  //      }
-  //      &:not(:last-child){
-  //        margin-right: 1rem;
-  //      }
-  //    }
-  //  }
-  //}
-
   .contact{
     position: absolute;
     left: 1.6rem;
@@ -198,8 +176,8 @@ header{
       .collapse-nav{
         display: block;
         position: absolute;
-        top: 15px;
-        left: 15px;
+        top: 0;
+        left: 10px;
         z-index: 100;
 
         .collapse{
