--- a/src/assets/css/commentBox.less
+++ b/src/assets/css/commentBox.less
@@ -147,6 +147,7 @@
           padding: 0 .8rem;
           font-size: 1.2rem;
           border-radius: 4px;
+          touch-action: none;
 
           &:not(:last-child){
             margin-right: 1rem;
