--- a/src/assets/css/common.less
+++ b/src/assets/css/common.less
@@ -66,7 +66,7 @@ a, a:link, a:visited, a:focus, a:hover {
     //box-shadow: 0 0 3px #333;
     //-webkit-box-shadow: 0 0 3px #333;
     //-moz-box-shadow: 0 0 3px #333;
-    overflow: hidden;
+    //overflow: hidden;
   }
 
   .main {
