评论区优化

--- a/src/assets/css/comment.less
+++ b/src/assets/css/comment.less
@@ -82,6 +82,7 @@
         position: absolute;
         right: 0;
         bottom: 0;
+        cursor: pointer;
       }
     }
 
@@ -166,6 +167,7 @@
               position: absolute;
               right: 0;
               bottom: 0;
+              cursor: pointer;
             }
           }
         }
