--- a/src/assets/css/comment.css
+++ b/src/assets/css/comment.css
@@ -187,6 +187,7 @@
   position: absolute;
   right: 0;
   bottom: 0;
+  cursor: pointer;
 }
 .comment-section .comment-item .reply-wrap {
   width: 100%;
@@ -260,6 +261,7 @@
   position: absolute;
   right: 0;
   bottom: 0;
+  cursor: pointer;
 }
 @media screen and (max-width: 768px) {
   .comment-section .comment-title {
