评论组件样式修改

--- a/src/assets/css/common.less
+++ b/src/assets/css/common.less
@@ -187,28 +187,20 @@ a, a:link, a:visited, a:focus, a:hover {
 
 ///* 超小屏幕（手机，小于 768px） */
 //@media screen and (max-width: 767px) {
-//  html,body{
-//    font-size: 56px;
-//  }
+//
 //}
 //
 ///* 小屏幕（平板，大于等于 768px） */
 //@media screen and (min-width: 768px) {
-//  html,body{
-//    font-size: 64px;
-//  }
+//
 //}
 //
 ///* 中等屏幕（桌面显示器，大于等于 992px） */
 //@media screen and (min-width: 992px) {
-//  html,body{
-//    font-size: 82.7px;
-//  }
+//
 //}
 //
 ///* 大屏幕（大桌面显示器，大于等于 1200px） */
 //@media screen and (min-width: 1200px) {
-//  html,body{
-//    font-size: 100px;
-//  }
+//
 //}
